# lightagent

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
docs/: advanced_patterns.md  agents.md  api_reference.md  getting_started.md  llm_integration.md  mcp.md  mcp_tools.md  tape_system.md  tools.md
scripts/: build.py
spec-guide/: framework.md
src/lightagent/: __init__.py  storage.py  tape.py  tools.py
src/lightagent/agents/: __init__.py  base.py  simple.py
src/lightagent/models/: base.py
src/lightagent/utils/: logging.py
src/robotape/agents/: llm.py  mcpllm.py
src/robotape/llm/: __init__.py  base.py
src/robotape/llm/providers/: __init__.py  anthropic.py  huggingface.py  openai.py
src/robotape/utils/: mcp.py
tests/: __init__.py  conftest.py  test_agents.py  test_llm.py  test_mcpllm.py  test_storage.py  test_tape.py  test_tools.py  test_validation.py
tests/data/: test_server.py
