[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightagent"
version = "0.1.0"
description = "Lightweight agent framework with tape system"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.8",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100